--- a/vov/zelenodolsk_vov.html
+++ b/vov/zelenodolsk_vov.html
@@ -17,13 +17,13 @@
     ital,wght@0,100..900;1,100..900&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;
     1,800&family=Tektur:wght@400..900&display=swap" rel="stylesheet">
 </head>
-<body style="background-image: url('D:/Project/image/old-paper-bg.png');">
+<body style="background-image: url('/project_for_ZMK/image/old-paper-bg.png');">
     <header>
         <nav>
             <ul>
                 <div>
                     <a class="nav-item-img" href="D:/Project/index.html">
-                        <img class="nav-item-img_img" src="D:/Project/image/main-zmk.png" width="8%" alt="Змк"/>
+                        <img class="nav-item-img_img" src="/project_for_ZMK/image/main-zmk.png" width="8%" alt="Змк"/>
                     </a>
                     
                 </div>
