--- a/vov/zelenodolsk_vov.html
+++ b/vov/zelenodolsk_vov.html
@@ -22,7 +22,7 @@
         <nav>
             <ul>
                 <div>
-                    <a class="nav-item-img" href="D:/Project/index.html">
+                    <a class="nav-item-img" href="/project_for_ZMK/index.html">
                         <img class="nav-item-img_img" src="/project_for_ZMK/image/main-zmk.png" width="8%" alt="Змк"/>
                     </a>
                     
