--- a/vov/elabuga_vov.html
+++ b/vov/elabuga_vov.html
@@ -167,7 +167,7 @@
                 <article>
                     <div class="image-soldier_two">
                         <!-- Image soldier-->
-                        <img src/project_for_ZMK/image/soldiers_elabuga/soldier2.png" alt="Файзи Шамсемухамметович (Мухаметович) Масагутов " width="10%"/>
+                        <img src="/project_for_ZMK/image/soldiers_elabuga/soldier2.png" alt="Файзи Шамсемухамметович (Мухаметович) Масагутов " width="10%"/>
     
                         <!-- QR -->
                         <img src="/project_for_ZMK/image/soldiers_elabuga/soldier2_qr.png" alt="Файзи Шамсемухамметович (Мухаметович) Масагутов  QR" width="15%"/>
