--- a/vov/elabuga_vov.html
+++ b/vov/elabuga_vov.html
@@ -28,7 +28,7 @@
                     
                 </div>
                 <li>
-                    <a href="/index.html" class="nav">
+                    <a href="/project_for_ZMK/index.html" class="nav">
                         ГЛАВНАЯ
                     </a>
                 </li>
