--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <div class="nav-img">
                     <a class="nav-item-img" href="index.html">
-                        <img src="image/main-zmk.png" width="8%"/>
+                        <img src="/project_for_ZMK/image/main-zmk.png" width="8%"/>
                     </a>
                 </div>
                 <li>
@@ -42,8 +42,8 @@
                       <li><a class="dropdown-item" href="#">Верхнеуслонцев</a></li>
                       <li><a class="dropdown-item" href="#">Высокогорский район</a></li>
                       <li><a class="dropdown-item" href="#">Дрожжановский район</a></li>
-                      <li><a class="dropdown-item" href="vov/elabuga_vov.html">Елабуга</a></li>
-                      <li><a class="dropdown-item" href="vov/zelenodolsk_vov.html">Зеленодольск</a></li>
+                      <li><a class="dropdown-item" href="/project_for_ZMK/vov/elabuga_vov.html">Елабуга</a></li>
+                      <li><a class="dropdown-item" href="/project_for_ZMK/vov/zelenodolsk_vov.html">Зеленодольск</a></li>
                       <li><a class="dropdown-item" href="#">Лениногорск</a></li>
                       <li><a class="dropdown-item" href="#">Менделевский район</a></li>
                       <li><a class="dropdown-item" href="#">Мензилинск</a></li>
@@ -72,8 +72,8 @@
                         <li><a class="dropdown-item" href="#">Верхнеуслонцев</a></li>
                         <li><a class="dropdown-item" href="#">Высокогорский район</a></li>
                         <li><a class="dropdown-item" href="#">Дрожжановский район</a></li>
-                        <li><a class="dropdown-item" href="D:/Project/svo/elabuga_svo.html">Елабуга</a></li>
-                        <li><a class="dropdown-item" href="D:/Project/svo/zelenodolsk_svo.html">Зеленодольск</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/svo/elabuga_svo.html">Елабуга</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/Project/svo/zelenodolsk_svo.html">Зеленодольск</a></li>
                         <li><a class="dropdown-item" href="#">Лениногорск</a></li>
                         <li><a class="dropdown-item" href="#">Менделевский район</a></li>
                         <li><a class="dropdown-item" href="#">Мензилинск</a></li>
@@ -103,8 +103,8 @@
                         <li><a class="dropdown-item" href="#">Верхнеуслонцев</a></li>
                         <li><a class="dropdown-item" href="#">Высокогорский район</a></li>
                         <li><a class="dropdown-item" href="#">Дрожжановский район</a></li>
-                        <li><a class="dropdown-item" href="D:/Project/mp/elabuga_mp.html">Елабуга</a></li>
-                        <li><a class="dropdown-item" href="D:/Project/mp/zelenodolsk_mp.html">Зеленодольск</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/mp/elabuga_mp.html">Елабуга</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/mp/zelenodolsk_mp.html">Зеленодольск</a></li>
                         <li><a class="dropdown-item" href="#">Лениногорск</a></li>
                         <li><a class="dropdown-item" href="#">Менделевский район</a></li>
                         <li><a class="dropdown-item" href="#">Мензилинск</a></li>
@@ -127,7 +127,7 @@
 
     <main>
         <div class="video-background">
-            <video src="video/kuieo7xgyef1xpmzqzxfbzi59g2xzdr3.mp4" data-msrc="video/kuieo7xgyef1xpmzqzxfbzi59g2xzdr3.mp4" data-dsrc="video/kuieo7xgyef1xpmzqzxfbzi59g2xzdr3.mp4" playsinline="" webkit-playsinline="" preload="metadata" muted="" loop="" autoplay=""></video>
+            <video src="/project_for_ZMK/video/8mb.video-EQ5_WLWL0pRR.mp4" data-msrc="video/kuieo7xgyef1xpmzqzxfbzi59g2xzdr3.mp4" data-dsrc="video/kuieo7xgyef1xpmzqzxfbzi59g2xzdr3.mp4" playsinline="" webkit-playsinline="" preload="metadata" muted="" loop="" autoplay=""></video>
         </div>
  
     </main>
