--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Защитники Отечества на карте Татарстана</title>
 
     <!-- CSS -->
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="/project_for_ZMK/css/style.css" rel="stylesheet" type="text/css" />
     <!-- CSS-Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -20,7 +20,7 @@
             <ul>
                 <div class="nav-img">
                     <a class="nav-item-img" href="index.html">
-                        <img src="image/main-zmk.png" width="8%"/>
+                        <img src="/project_for_ZMK/image/main-zmk.png" width="8%"/>
                     </a>
                 </div>
                 <li>
@@ -42,8 +42,8 @@
                       <li><a class="dropdown-item" href="#">Верхнеуслонцев</a></li>
                       <li><a class="dropdown-item" href="#">Высокогорский район</a></li>
                       <li><a class="dropdown-item" href="#">Дрожжановский район</a></li>
-                      <li><a class="dropdown-item" href="vov/elabuga_vov.html">Елабуга</a></li>
-                      <li><a class="dropdown-item" href="vov/zelenodolsk_vov.html">Зеленодольск</a></li>
+                      <li><a class="dropdown-item" href="/project_for_ZMK/vov/elabuga_vov.html">Елабуга</a></li>
+                      <li><a class="dropdown-item" href="/project_for_ZMK/vov/zelenodolsk_vov.html">Зеленодольск</a></li>
                       <li><a class="dropdown-item" href="#">Лениногорск</a></li>
                       <li><a class="dropdown-item" href="#">Менделевский район</a></li>
                       <li><a class="dropdown-item" href="#">Мензилинск</a></li>
@@ -53,7 +53,7 @@
                       <li><a class="dropdown-item" href="#">Пестречинский район</a></li>
                       <li><a class="dropdown-item" href="#">Спасский район</a></li>
                       <li><a class="dropdown-item" href="#">Тетюшский район</a></li>
-                      <li><a class="dropdown-item" href="/D:/Project/vov/Tukayevsky_vov.html">Тукаевский район</a></li>
+                      <li><a class="dropdown-item" href="/project_for_ZMK/vov/Tukayevsky_vov.html">Тукаевский район</a></li>
                       <li><a class="dropdown-item" href="#">Уруссу</a></li>
                       <li><a class="dropdown-item" href="#">Ютазинский</a></li>
                     </ul>
@@ -72,8 +72,8 @@
                         <li><a class="dropdown-item" href="#">Верхнеуслонцев</a></li>
                         <li><a class="dropdown-item" href="#">Высокогорский район</a></li>
                         <li><a class="dropdown-item" href="#">Дрожжановский район</a></li>
-                        <li><a class="dropdown-item" href="D:/Project/svo/elabuga_svo.html">Елабуга</a></li>
-                        <li><a class="dropdown-item" href="D:/Project/svo/zelenodolsk_svo.html">Зеленодольск</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/svo/elabuga_svo.html">Елабуга</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/svo/zelenodolsk_svo.html">Зеленодольск</a></li>
                         <li><a class="dropdown-item" href="#">Лениногорск</a></li>
                         <li><a class="dropdown-item" href="#">Менделевский район</a></li>
                         <li><a class="dropdown-item" href="#">Мензилинск</a></li>
@@ -83,7 +83,7 @@
                         <li><a class="dropdown-item" href="#">Пестречинский район</a></li>
                         <li><a class="dropdown-item" href="#">Спасский район</a></li>
                         <li><a class="dropdown-item" href="#">Тетюшский район</a></li>
-                        <li><a class="dropdown-item" href="/D:/Project/svo/Tukaev_svo.html">Тукаевский район</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/svo/Tukaev_svo.html">Тукаевский район</a></li>
                         <li><a class="dropdown-item" href="#">Уруссу</a></li>
                         <li><a class="dropdown-item" href="#">Ютазинский</a></li>
                     </ul>
@@ -103,8 +103,8 @@
                         <li><a class="dropdown-item" href="#">Верхнеуслонцев</a></li>
                         <li><a class="dropdown-item" href="#">Высокогорский район</a></li>
                         <li><a class="dropdown-item" href="#">Дрожжановский район</a></li>
-                        <li><a class="dropdown-item" href="D:/Project/mp/elabuga_mp.html">Елабуга</a></li>
-                        <li><a class="dropdown-item" href="D:/Project/mp/zelenodolsk_mp.html">Зеленодольск</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/mp/elabuga_mp.html">Елабуга</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/mp/zelenodolsk_mp.html">Зеленодольск</a></li>
                         <li><a class="dropdown-item" href="#">Лениногорск</a></li>
                         <li><a class="dropdown-item" href="#">Менделевский район</a></li>
                         <li><a class="dropdown-item" href="#">Мензилинск</a></li>
@@ -114,7 +114,7 @@
                         <li><a class="dropdown-item" href="#">Пестречинский район</a></li>
                         <li><a class="dropdown-item" href="#">Спасский район</a></li>
                         <li><a class="dropdown-item" href="#">Тетюшский район</a></li>
-                        <li><a class="dropdown-item" href="/D:/Project/mp/Tukaev_mp.html">Тукаевский район</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/mp/Tukaev_mp.html">Тукаевский район</a></li>
                         <li><a class="dropdown-item" href="#">Уруссу</a></li>
                         <li><a class="dropdown-item" href="#">Ютазинский</a></li>
                     </ul>
@@ -127,7 +127,7 @@
 
     <main>
         <div class="video-background">
-            <video src="video/kuieo7xgyef1xpmzqzxfbzi59g2xzdr3.mp4" data-msrc="video/kuieo7xgyef1xpmzqzxfbzi59g2xzdr3.mp4" data-dsrc="video/kuieo7xgyef1xpmzqzxfbzi59g2xzdr3.mp4" playsinline="" webkit-playsinline="" preload="metadata" muted="" loop="" autoplay=""></video>
+            <video src="/project_for_ZMK/video/kuieo7xgyef1xpmzqzxfbzi59g2xzdr3.mp4" data-msrc="/project_for_ZMK/video/kuieo7xgyef1xpmzqzxfbzi59g2xzdr3.mp4" data-dsrc="/project_for_ZMK/video/kuieo7xgyef1xpmzqzxfbzi59g2xzdr3.mp4" playsinline="" webkit-playsinline="" preload="metadata" muted="" loop="" autoplay=""></video>
         </div>
  
     </main>
