--- a/mp/zelenodolsk_mp.html
+++ b/mp/zelenodolsk_mp.html
@@ -56,7 +56,7 @@
                       <li><a class="dropdown-item" href="#">Пестречинский район</a></li>
                       <li><a class="dropdown-item" href="#">Спасский район</a></li>
                       <li><a class="dropdown-item" href="#">Тетюшский район</a></li>
-                      <li><a class="dropdown-item" href="#">Тукаевский район</a></li>
+                      <li><a class="dropdown-item" href="/project_for_ZMK/vov/Tukayevsky_vov.html">Тукаевский район</a></li>
                       <li><a class="dropdown-item" href="#">Уруссу</a></li>
                       <li><a class="dropdown-item" href="#">Ютазинский</a></li>
                     </ul>
@@ -86,7 +86,7 @@
                         <li><a class="dropdown-item" href="#">Пестречинский район</a></li>
                         <li><a class="dropdown-item" href="#">Спасский район</a></li>
                         <li><a class="dropdown-item" href="#">Тетюшский район</a></li>
-                        <li><a class="dropdown-item" href="#">Тукаевский район</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/svo/Tukaev_svo.html">Тукаевский район</a></li>
                         <li><a class="dropdown-item" href="#">Уруссу</a></li>
                         <li><a class="dropdown-item" href="#">Ютазинский</a></li>
                     </ul>
@@ -117,7 +117,7 @@
                         <li><a class="dropdown-item" href="#">Пестречинский район</a></li>
                         <li><a class="dropdown-item" href="#">Спасский район</a></li>
                         <li><a class="dropdown-item" href="#">Тетюшский район</a></li>
-                        <li><a class="dropdown-item" href="#">Тукаевский район</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/mp/Tukaev_mp.html">Тукаевский район</a></li>
                         <li><a class="dropdown-item" href="#">Уруссу</a></li>
                         <li><a class="dropdown-item" href="#">Ютазинский</a></li>
                     </ul>
