--- a/vov/zelenodolsk_vov.html
+++ b/vov/zelenodolsk_vov.html
@@ -18,7 +18,7 @@
     1,800&family=Tektur:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body style="background-image: url('/project_for_ZMK/image/old-paper-bg.png');">
-    <header>
+   <header>
         <nav>
             <ul>
                 <div>
@@ -56,7 +56,7 @@
                       <li><a class="dropdown-item" href="#">Пестречинский район</a></li>
                       <li><a class="dropdown-item" href="#">Спасский район</a></li>
                       <li><a class="dropdown-item" href="#">Тетюшский район</a></li>
-                      <li><a class="dropdown-item" href="#">Тукаевский район</a></li>
+                      <li><a class="dropdown-item" href="/project_for_ZMK/vov/Tukayevsky_vov.html">Тукаевский район</a></li>
                       <li><a class="dropdown-item" href="#">Уруссу</a></li>
                       <li><a class="dropdown-item" href="#">Ютазинский</a></li>
                     </ul>
@@ -86,7 +86,7 @@
                         <li><a class="dropdown-item" href="#">Пестречинский район</a></li>
                         <li><a class="dropdown-item" href="#">Спасский район</a></li>
                         <li><a class="dropdown-item" href="#">Тетюшский район</a></li>
-                        <li><a class="dropdown-item" href="#">Тукаевский район</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/svo/Tukaev_svo.html">Тукаевский район</a></li>
                         <li><a class="dropdown-item" href="#">Уруссу</a></li>
                         <li><a class="dropdown-item" href="#">Ютазинский</a></li>
                     </ul>
@@ -117,7 +117,7 @@
                         <li><a class="dropdown-item" href="#">Пестречинский район</a></li>
                         <li><a class="dropdown-item" href="#">Спасский район</a></li>
                         <li><a class="dropdown-item" href="#">Тетюшский район</a></li>
-                        <li><a class="dropdown-item" href="#">Тукаевский район</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/mp/Tukaev_mp.html">Тукаевский район</a></li>
                         <li><a class="dropdown-item" href="#">Уруссу</a></li>
                         <li><a class="dropdown-item" href="#">Ютазинский</a></li>
                     </ul>
