--- a/index.html
+++ b/index.html
@@ -14,17 +14,16 @@
 
 </head>
 <body style="background-color: #232C16;">
-    <header>
-        
+     <header>
         <nav>
             <ul>
-                <div class="nav-img">
-                    <a class="nav-item-img" href="index.html">
-                        <img src="/project_for_ZMK/image/main-zmk.png" width="8%"/>
-                    </a>
+                <div>
+                    <a class="nav-item-img" href="/project_for_ZMK/index.html">
+                        <img class="nav-item-img_img" src="/project_for_ZMK/image/main-zmk.png" width="8%" alt="Змк"/>
+                    </a>            
                 </div>
                 <li>
-                    <a class="nav-item-1" href="">
+                    <a class="nav-item-1" href="/project_for_ZMK/index.html">
                         Главная
                     </a>
                 </li>
@@ -122,7 +121,6 @@
                 <li>
             </ul>
         </nav>
-        
     </header>
 
     <main>
