--- a/svo/zelenodolsk_svo.html
+++ b/svo/zelenodolsk_svo.html
@@ -47,7 +47,7 @@
                       <li><a class="dropdown-item" href="#">Дрожжановский район</a></li>
                       <li><a class="dropdown-item" href="/project_for_ZMK/vov/elabuga_vov.html">Елабуга</a></li>
                       <li><a class="dropdown-item" href="/project_for_ZMK/vov/zelenodolsk_vov.html">Зеленодольск</a></li>
-                      <li><a class="dropdown-item" href="#">Лениногорск</a></li>
+                      <li><a class="dropdown-item" href="/project_for_ZMK/vov/Leninogorsk_vov.html">Лениногорск</a></li>
                       <li><a class="dropdown-item" href="#">Менделевский район</a></li>
                       <li><a class="dropdown-item" href="#">Мензилинск</a></li>
                       <li><a class="dropdown-item" href="#">Набережные челны</a></li>
@@ -77,7 +77,7 @@
                         <li><a class="dropdown-item" href="#">Дрожжановский район</a></li>
                         <li><a class="dropdown-item" href="/project_for_ZMK/svo/elabuga_svo.html">Елабуга</a></li>
                         <li><a class="dropdown-item" href="/project_for_ZMK/svo/zelenodolsk_svo.html">Зеленодольск</a></li>
-                        <li><a class="dropdown-item" href="#">Лениногорск</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/svo/Leninogorsk_svo.html">Лениногорск</a></li>
                         <li><a class="dropdown-item" href="#">Менделевский район</a></li>
                         <li><a class="dropdown-item" href="#">Мензилинск</a></li>
                         <li><a class="dropdown-item" href="#">Набережные челны</a></li>
@@ -108,7 +108,7 @@
                         <li><a class="dropdown-item" href="#">Дрожжановский район</a></li>
                         <li><a class="dropdown-item" href="/project_for_ZMK/mp/elabuga_mp.html">Елабуга</a></li>
                         <li><a class="dropdown-item" href="/project_for_ZMK/mp/zelenodolsk_mp.html">Зеленодольск</a></li>
-                        <li><a class="dropdown-item" href="#">Лениногорск</a></li>
+                        <li><a class="dropdown-item" href="/project_for_ZMK/mp/Leninogorsk_mp.html">Лениногорск</a></li>
                         <li><a class="dropdown-item" href="#">Менделевский район</a></li>
                         <li><a class="dropdown-item" href="#">Мензилинск</a></li>
                         <li><a class="dropdown-item" href="#">Набережные челны</a></li>
@@ -126,7 +126,7 @@
             </ul>
         </nav>
     </header>
-
+    
     <main>
         <div class="top-text-main">
             <h1>ЗЕЛЕНОДОЛЬСК СВО</h1>
