--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
                       <li><a class="dropdown-item" href="#">Мензилинск</a></li>
                       <li><a class="dropdown-item" href="#">Набережные челны</a></li>
                       <li><a class="dropdown-item" href="#">Новошешминск</a></li>
-                      <li><a class="dropdown-item" href="#">Пестрецы</a></li>
-                      <li><a class="dropdown-item" href="#">Пестречинский район</a></li>
+                      <li><a class="dropdown-item" href="/D:/Project/vov/Pestrechinsky_vov.html">Пестречинский район</a></li>
                       <li><a class="dropdown-item" href="#">Спасский район</a></li>
-                      <li><a class="dropdown-item" href="#">Тетюшский район</a></li>
+                      <li><a class="dropdown-item" href="/D:/Project/vov/Tetyushsky_vov.html">Тетюшский район</a></li>
                       <li><a class="dropdown-item" href="/D:/Project/vov/Tukayevsky_vov.html">Тукаевский район</a></li>
                       <li><a class="dropdown-item" href="#">Уруссу</a></li>
                       <li><a class="dropdown-item" href="#">Ютазинский</a></li>
@@ -78,10 +77,9 @@
                         <li><a class="dropdown-item" href="#">Мензилинск</a></li>
                         <li><a class="dropdown-item" href="#">Набережные челны</a></li>
                         <li><a class="dropdown-item" href="#">Новошешминск</a></li>
-                        <li><a class="dropdown-item" href="#">Пестрецы</a></li>
-                        <li><a class="dropdown-item" href="#">Пестречинский район</a></li>
+                        <li><a class="dropdown-item" href="/D:/Project/svo/Pestrechinsky_svo.html">Пестречинский район</a></li>
                         <li><a class="dropdown-item" href="#">Спасский район</a></li>
-                        <li><a class="dropdown-item" href="#">Тетюшский район</a></li>
+                        <li><a class="dropdown-item" href="/D:/Project/svo/Tetyushsky_svo.html">Тетюшский район</a></li>
                         <li><a class="dropdown-item" href="/D:/Project/svo/Tukaev_svo.html">Тукаевский район</a></li>
                         <li><a class="dropdown-item" href="#">Уруссу</a></li>
                         <li><a class="dropdown-item" href="#">Ютазинский</a></li>
@@ -109,10 +107,9 @@
                         <li><a class="dropdown-item" href="#">Мензилинск</a></li>
                         <li><a class="dropdown-item" href="#">Набережные челны</a></li>
                         <li><a class="dropdown-item" href="#">Новошешминск</a></li>
-                        <li><a class="dropdown-item" href="#">Пестрецы</a></li>
-                        <li><a class="dropdown-item" href="#">Пестречинский район</a></li>
+                        <li><a class="dropdown-item" href="/D:/Project/mp/Pestrechinsky_mp.html">Пестречинский район</a></li>
                         <li><a class="dropdown-item" href="#">Спасский район</a></li>
-                        <li><a class="dropdown-item" href="#">Тетюшский район</a></li>
+                        <li><a class="dropdown-item" href="/D:/Project/mp/Tetyushsky_mp.html">Тетюшский район</a></li>
                         <li><a class="dropdown-item" href="/D:/Project/mp/Tukaev_mp.html">Тукаевский район</a></li>
                         <li><a class="dropdown-item" href="#">Уруссу</a></li>
                         <li><a class="dropdown-item" href="#">Ютазинский</a></li>
