--- a/vov/zelenodolsk_vov.html
+++ b/vov/zelenodolsk_vov.html
@@ -173,7 +173,7 @@
                             <p>
                                 Ка́тин Никола́й Андре́евич (21 ноября 1924, деревня Ильинское — 7 апреля 1945, Кёнигсберг, Свободное государство Пруссия,
                                  Германия) — Герой Советского Союза, старший лейтенант. Член ВКП(б) с марта 1945 года. Участник Великой Отечественной
-                                  войны с августа 1943 года.
+                                  войны с августа 1943 года. (7 апреля исполнилось 80 лет его подвигу)
                             </p>
                         </div>
                     </div>
