--- a/mp/zelenodolsk_mp.html
+++ b/mp/zelenodolsk_mp.html
@@ -242,7 +242,7 @@
                     <div class="image-mp_six">
                         <!-- Image mp-->
                         <a href="/project_for_ZMK/image/mp_zelenodolsk/mp_zelenodolsk6.png" target="_blank">
-                            <img src="/project_for_ZMK/image/mp_zelenodolsk/mp_zelenodolsk6.png" alt="мемориал" width="10%"/>
+                            <img src="/project_for_ZMK/image/mp_zelenodolsk/mp_zelenodolsk6.jpg" alt="мемориал" width="10%"/>
                         </a>
     
                         <!-- QR -->
@@ -250,7 +250,8 @@
     
                         <div class="info-about-mp_six">
                             <p>
-                                Память Героя Советского Союза Николая Андреевича Катина
+                                Память Героя Советского Союза Николая Андреевича Катина. 7 апреля исполнилось 80 лет подвигу нашего 
+                                земляка - Николая Андреевича Катина. В этот день калининградцы несли цветы к месту его гибели.   
                             </p>
                         </div>
                     </div>
