--- a/mp/Tukaev_mp.html
+++ b/mp/Tukaev_mp.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 </head>
-<body style="background-image: url('D:/Project/image/old-paper-bg.png');">
+<body style="background-image: url('/project_for_ZMK/image/old-paper-bg.png');">
         <header>
         <nav>
             <ul>
