--- a/mp/Leninogorsk_mp.html
+++ b/mp/Leninogorsk_mp.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Лениногорский район Памятные Места</title>
 
-    <link href="D:/Project/css/mp_Leninogorsk.css" rel="stylesheet" type="text/css" /> 
+    <link href="/project_for_ZMK/css/mp_Leninogorsk.css" rel="stylesheet" type="text/css" /> 
     <!-- CSS-Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -19,7 +19,7 @@
         <nav>
             <ul>
                 <div>
-                    <a class="nav-item-img" href="D:/Project/index.html">
+                    <a class="nav-item-img" href="/project_for_ZMK/index.html">
                         <img class="nav-item-img_img" src="D:/Project/image/main-zmk.png" width="8%" alt="Змк"/>
                     </a>            
                 </div>
