--- a/mp/Leninogorsk_mp.html
+++ b/mp/Leninogorsk_mp.html
@@ -159,7 +159,7 @@
                     <div class="image-mp_two">
                          <!-- Image mp-->
                          <a href="/project_for_ZMK/image/mp_Tukaev/mp_Tukaev1.png" target="_blank">
-                            <img src="/D:/Project/image/mp_Leninogorsk/mp_2_Leninogorsk.png" alt="Обелиск павшим и участникам Великой Отечественной войны, труженикам тыла." width="10%"/>
+                            <img src="../image/mp_Leninogorsk/mp_2_Leninogorsk.png" alt="Обелиск павшим и участникам Великой Отечественной войны, труженикам тыла." width="10%"/>
                         </a>
     
                         <!-- QR -->
